--- a/css/style_consumo.css
+++ b/css/style_consumo.css
@@ -159,21 +159,20 @@ form button{
 /******************************************************************
 ***************************Aside***********************************/
 aside{
-    background-color: #D7CBD7;
+    background-color: #e9e9e9;
     padding: 20px;
-    height: 400px;
 }
 
 aside div{
     background-color: #FFFFFF;
     width: 90%;
-    height: 40%;
     margin: 10px auto;
+    padding: 10px;
 }
 
-.mapa, .youtube{
+.youtube{
     width: 100%;
-    height: 150%;
+    height: 250px;
 }
 
 /******************************************************************
