--- a/css/style_artigosenoticias.css
+++ b/css/style_artigosenoticias.css
@@ -79,7 +79,7 @@ nav ul li a:hover{
 .artigo-item {
     display: flex;
     gap: 25px;
-    background: white;
+    background: #c9f3ff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 8px rgba(0,0,0,0.1);
@@ -100,13 +100,13 @@ nav ul li a:hover{
 
 .texto-artigo p {
     text-align: justify;
-    line-height: 1.6;
-    margin-bottom: 15px;
+    line-height: 1.5;
+    margin-bottom: 12px;
 }
 
 .botao {
     display: inline-block;
-    padding: 8px 14px;
+    padding: 8px 12px;
     background: #1e90ff;
     color: #fff;
     text-decoration: none;
@@ -115,6 +115,19 @@ nav ul li a:hover{
 
 .botao:hover {
     background: #0b71c7;
+}
+
+/* RODAPÉ */
+footer{
+    background-color: #1D3557;
+    height: auto;
+    padding: 20px;
+}
+
+footer p{
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
 }
 
 /* RESPONSIVIDADE */
