--- a/css/style_artigosenoticias.css
+++ b/css/style_artigosenoticias.css
@@ -68,6 +68,14 @@ nav ul li a:hover{
     margin-bottom: 10px;
 }
 
+/*CARROSSEL*/
+
+.carousel-inner img {
+    height: 380px;
+    object-fit: cover;
+}
+
+
 /* LISTA DE ARTIGOS */
 .lista-artigos {
     display: flex;
@@ -115,6 +123,56 @@ nav ul li a:hover{
 
 .botao:hover {
     background: #0b71c7;
+}
+
+/* SECAO DE NOTICIAS */
+.noticias-secao {
+    margin: 50px 0;
+}
+
+.titulo-noticias {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 35px;
+    color:#1D3557
+}
+
+.noticias-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+}
+
+.noticia-item {
+    background: #e3f7ff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    text-align: center;
+}
+
+.noticia-item img {
+    width: 90%;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.noticia-item h4 {
+    margin: 12px 0 8px;
+}
+
+.noticia-item p {
+    font-size: 14px;
+    text-align: justify;
+    margin-bottom: 10px;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .noticias-grid {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* RODAPÉ */
