--- a/css/style.css
+++ b/css/style.css
@@ -158,14 +158,15 @@ form{
 }
 
 form label{
-    display: flex;
+    display: inline;
     margin-top: 10px;
     color: #FFFFFF;
+    text-align: center;
 }
 
 form input{
     width: 100%;
-    height: 32px;
+    height: 35px;
     margin-top: 5px;
     padding: 5px;
     border-radius: 5px; 
@@ -174,7 +175,7 @@ form input{
 form button{
     margin-top: 15px;
     width: 100%;
-    height: 40px;
+    height: 50px;
     font-weight: bold;
     background-color: #1D3557;
     color: #fff;
