--- a/css/style_artigosenoticias.css
+++ b/css/style_artigosenoticias.css
@@ -66,6 +66,13 @@ nav ul li a:hover{
 
 .titulo-pagina h2 {
     margin-bottom: 10px;
+    color: #1D3557
+}
+
+.titulo-pagina p {
+    text-align: center;
+    line-height: 1.5;
+    margin: 20px;
 }
 
 /*CARROSSEL*/
@@ -75,6 +82,15 @@ nav ul li a:hover{
     object-fit: cover;
 }
 
+.carousel-inner h5 {
+    margin-bottom: 12px;
+    color: #c9f3ff
+}
+
+.carousel-inner p {
+    margin-bottom: 10px;
+    color: #fff
+}
 
 /* LISTA DE ARTIGOS */
 .lista-artigos {
